--- a/css/mixins.scss
+++ b/css/mixins.scss
@@ -128,7 +128,7 @@
 			justify-content: flex-start;
 			align-items: center;
 
-			width: 818px;
+			width: 819px;
 			padding-bottom: 1px;
 			
 			.dt-button {
@@ -139,7 +139,7 @@
 		@media screen and (max-width: 1024px) {
 			// Three column layout
 			> :last-child {
-				width: 614px;
+				width: 615px;
 			}
 		}
 
